@@ -14,6 +14,7 @@ Bug fixes
  - [web] fixed email reminder with attendees (#4115)
  - [web] prevented form to be marked dirty when changing password (#4138)
  - [web] restored support for SOGoLDAPContactInfoAttribute
+ - [web] avoid duplicated email addresses in LDAP-based addressbook (#4129)
  - [core] cherry-picked comma escaping fix from v2 (#3296)
  - [core] fix sogo-tool restore potentially crashing on corrupted data (#4048)
  - [core] handle properly mails using windows-1255 charset (#4124)
